# workout_with_me

./: .gitignore  Cargo.toml  LICENSE  README.md  log_file.json  workouts.json  workouts.json.bacj
src/: file_utils.rs  main.rs  manual_gui_construct.rs  my_menu_bar.rs  time_object.rs  time_utils.rs  times.rs
src/labels/: mod.rs  static_labels.rs
src/objects/: mod.rs  time_object.rs  workout.rs
src/ui/: build_ui.rs  left_frame.rs  menu_bar.rs  mod.rs  right_frame.rs  tree_store_helper.rs
