[package]
name = "workout_with_me"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = {version = "*", features= ["serde"]}
gio = "0.14.8"                     # Rust bindings for the Gio library
glib = "0.14.8"                           # Rust bindings for the GLib library
serde = {version = "*", features = ["derive"]}
serde_json = "*"                     # A JSON serialization file format
gdk4 = "0.3.1"
log = "*"
pretty_env_logger = "*"

[dependencies.gtk]
package = "gtk4"
version = "0.3.1"
features = ["v4_4"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3